# extism

./: Cargo.toml
.github/workflows/: ci.yml
elixir/: README.md  mix.exs
elixir/lib/: extism.ex
elixir/lib/extism/: native.ex  plugin.ex
elixir/native/extism_nif/: Cargo.toml
elixir/native/extism_nif/.cargo/: config
elixir/native/extism_nif/src/: lib.rs
elixir/test/: extism_test.exs
ruby/lib/extism/: version.rb
rust/src/: lib.rs
